BUG#33213 - Wrong CREATE TABLESPACE error when using existing DATAFILE

Creating a tablespace with data file that already exist returns an
error which states that the tablespace exist.

With this fix error message states that the data file exist.