storage/falcon/TableSpaceManager.cpp
@@ -171,7 +171,7 @@ TableSpace* TableSpaceManager::createTableSpace(const char *name, const char *fi
 	if (!repository && tableSpace->dbb->doesFileExist(fileName))
 		{
 		delete tableSpace;
-		throw SQLError(TABLESPACE_EXIST_ERROR, "table space file name \"%s\" already exists\n", fileName);
+		throw SQLError(TABLESPACE_DATAFILE_EXIST_ERROR, "table space file name \"%s\" already exists\n", fileName);
 		}
 		
 	try
